tests/cases/alloc_certificate/reject/indirect_call.pr
fn apply(f : (Int) -> Int, x : Int) : Int @ noalloc = f(x)
